# cvm_elt

./: mkdocs.yml  pre-commit-config.yaml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/pipeline/: __init__.py  first.py
tests/: __init__.py  test_first.py
